--- a/src/components/detail/detail.scss
+++ b/src/components/detail/detail.scss
@@ -41,6 +41,7 @@
     }
     .share{
         height: 1.5rem;
+        width: 100%;
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -78,10 +79,12 @@
         }
     }
     #intersted{
-        position: absolute;
+        position: fixed;
         z-index: 99999;
-        top: 10px;
+        top: 0;
+        bottom: 0;
         left: 0;
+        right: 0;
         width: 100%;
         height: 100%;   
         background: rgba(0,0,0,.4);
